--- a/src/localization/locales/en.json
+++ b/src/localization/locales/en.json
@@ -26,6 +26,7 @@
         "phone": "Phone Number",
         "confirm_password": "Confirm Password",
         "forgot_password": "Forgot Password?",
+        "forgot_password_subtitle": "Enter your phone number to receive a verification code",
         "no_account": "Don't have an account? Register",
         "have_account": "Already have an account? Login",
         "login_required": "Login Required",
@@ -43,8 +44,18 @@
         "terms_required_title": "Terms Required",
         "terms_required_msg": "Please agree to the Terms & Conditions to continue",
         "registration_success_title": "Success!",
-        "registration_success_msg": "Account created successfully",
+        "registration_success_msg": "Account created successfully. A verification code has been sent to your phone.",
         "registration_failed_title": "Registration Failed",
+        "invalid_credentials": "Invalid phone number or password",
+        "send_code": "Send Code",
+        "verify_otp": "Enter Code",
+        "verify_otp_subtitle": "Enter the 6-digit code sent to",
+        "verify": "Verify",
+        "otp": "Verification Code",
+        "reset_password": "Reset Password",
+        "reset_password_subtitle": "Enter your new password",
+        "new_password": "New Password",
+        "password_reset_success": "Password reset successfully",
         "sign_out": "Sign Out",
         "sign_out_confirm": "Are you sure you want to sign out?"
     },
