--- a/src/localization/locales/ru.json
+++ b/src/localization/locales/ru.json
@@ -26,6 +26,7 @@
         "phone": "Номер телефона",
         "confirm_password": "Подтвердите пароль",
         "forgot_password": "Забыли пароль?",
+        "forgot_password_subtitle": "Введите номер телефона для получения кода подтверждения",
         "no_account": "Нет аккаунта? Зарегистрироваться",
         "have_account": "Уже есть аккаунт? Войти",
         "login_required": "Требуется вход",
@@ -43,8 +44,18 @@
         "terms_required_title": "Требуется согласие",
         "terms_required_msg": "Пожалуйста, согласитесь с Условиями использования для продолжения",
         "registration_success_title": "Успешно!",
-        "registration_success_msg": "Аккаунт успешно создан",
+        "registration_success_msg": "Аккаунт успешно создан. Код подтверждения отправлен на ваш телефон.",
         "registration_failed_title": "Ошибка регистрации",
+        "invalid_credentials": "Неверный номер телефона или пароль",
+        "send_code": "Отправить код",
+        "verify_otp": "Введите код",
+        "verify_otp_subtitle": "Введите 6-значный код, отправленный на",
+        "verify": "Подтвердить",
+        "otp": "Код подтверждения",
+        "reset_password": "Сбросить пароль",
+        "reset_password_subtitle": "Введите новый пароль",
+        "new_password": "Новый пароль",
+        "password_reset_success": "Пароль успешно сброшен",
         "sign_out": "Выйти",
         "sign_out_confirm": "Вы уверены, что хотите выйти?"
     },
