--- a/src/localization/locales/uz.json
+++ b/src/localization/locales/uz.json
@@ -26,6 +26,7 @@
         "phone": "Telefon raqami",
         "confirm_password": "Parolni tasdiqlang",
         "forgot_password": "Parolni unutdingizmi?",
+        "forgot_password_subtitle": "Tasdiqlash kodini olish uchun telefon raqamingizni kiriting",
         "no_account": "Hisobingiz yo'qmi? Ro'yxatdan o'tish",
         "have_account": "Hisobingiz bormi? Kirish",
         "login_required": "Kirish talab qilinadi",
@@ -43,8 +44,18 @@
         "terms_required_title": "Rozilik talab qilinadi",
         "terms_required_msg": "Davom etish uchun Foydalanish shartlariga rozi bo'ling",
         "registration_success_title": "Muvaffaqiyatli!",
-        "registration_success_msg": "Hisob muvaffaqiyatli yaratildi",
+        "registration_success_msg": "Hisob muvaffaqiyatli yaratildi. Tasdiqlash kodi telefon raqamingizga yuborildi.",
         "registration_failed_title": "Ro'yxatdan o'tishda xatolik",
+        "invalid_credentials": "Telefon raqam yoki parol noto'g'ri",
+        "send_code": "Kod yuborish",
+        "verify_otp": "Kodni kiriting",
+        "verify_otp_subtitle": "6 raqamli kodni kiriting, yuborilgan raqam:",
+        "verify": "Tasdiqlash",
+        "otp": "Tasdiqlash kodi",
+        "reset_password": "Parolni tiklash",
+        "reset_password_subtitle": "Yangi parolni kiriting",
+        "new_password": "Yangi parol",
+        "password_reset_success": "Parol muvaffaqiyatli tiklandi",
         "sign_out": "Chiqish",
         "sign_out_confirm": "Haqiqatan ham chiqmoqchimisiz?"
     },
